Styling modals and fixed dropdown overflow

--- a/src/Components/Home/AddExpense/Dropdown-Menu/Dropdown.scss
+++ b/src/Components/Home/AddExpense/Dropdown-Menu/Dropdown.scss
@@ -9,4 +9,6 @@
 
 .dropbox{
   width: 100%;
+  color: #000;
+  font-size: 1.3rem;
 }
